<resources>
    <string name="app_name">%1$s</string>
    <string name="name">ПАО Ростелеком(v.2.0)</string>
    <string name="test">Наряды за неделю</string>
    <string name="testN">Наряды за 30 дней </string>
    <string name="work">Сотрудники</string>
    <string name="option">Настройки</string>
    <string name="today">Сегодня</string>
    <string name="Repet">Повторные заявки</string>
    <string name="Ok">Принять в работу</string>
    <string name="dump">сбросить</string>
    <string name="apply">применить</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_division">DivisionActivity</string>
    <string name="title_activity_test">TestActivity</string>
</resources>

