<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/today"
        android:title="@string/today"
        android:icon="@drawable/ic_menu_search"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/weekOnOrder"
        android:title="@string/test"
        android:icon="@drawable/ic_menu_reply_all"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/weekOnWorkers"
        android:title="@string/work"
        android:icon="@drawable/ic_menu_contact"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/Setting"
        android:title="@string/option"
        android:icon="@drawable/ic_menu_preferences"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/Nday"
        android:title="@string/testN"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/Repet"
        android:title="@string/Repet"
        app:showAsAction="never">
    </item>
</menu>